--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
 Django==5.0.7
+django-cors-headers==4.9.0
 djangorestframework==3.15.2
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
