--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ charset-normalizer==3.4.3
 Django==5.0.7
 django-cors-headers==4.9.0
 djangorestframework==3.15.2
+django-filter==24.3
+django-rest-framework-simplejwt==5.4.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
 google-api-python-client==2.182.0
