--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,9 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 Django==5.0.7
 django-cors-headers==4.9.0
-djangorestframework==3.15.2
 django-filter==24.3
-django-rest-framework-simplejwt==5.4.0
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.4.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
 google-api-python-client==2.182.0
@@ -28,6 +28,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.9
 pydantic_core==2.33.2
+PyJWT==2.10.1
 pyparsing==3.2.5
 python-dotenv==1.0.1
 reportlab==4.4.4
